media-library/media-catalog-app.yml
apiVersion: v1
kind: Service
metadata:
  name: media-library-client-service
spec:
  selector:
    app: media-library-client
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-library-client
  labels:
    app: media-library-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-library-client
  template:
    metadata:
      labels:
        app: media-library-client
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: media-library-client
        image: trance0302/media-library-client:0.1.9
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html/assets/config
      volumes:
        - name: config-volume
          configMap:
            name: media-library-config
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: media-library-storage-service
spec:
  selector:
    app: media-library-storage-service
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-library-storage-service
  labels: 
    app: media-library-storage-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-library-storage-service
  template:
    metadata:
      labels:
        app: media-library-storage-service
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: media-library-storage-service
          image: trance0302/media-library-storage-service:0.1.32
          ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
      
---

apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-service
subsets:
  - addresses:
        - ip: 192.168.40.61
    ports:
      - port: 3306
